# Congress-Trading-Signal

./: .gitignore  1.Congress_Trading_Signal_Audit.pptx  ETAT_AVANCEMENT_PROJET.md  ETAT_AVANCEMENT_PROJET.tex  HANDOFF_PARITE_HOUSE_SENAT.md  Nettoyage_Backtest_2020_2026.ipynb  README.md  house_ptr_coverage_audit.ipynb  keepawake  pyproject.toml
0 HOUSE/: BACKLOG_OCR.md  RAPPORT_DIGITAL_2020-2026.md  RAPPORT_OCR_VALIDATION.md  README.md  house_multiyear.py  house_ocr_multiyear.py  notebook_v1_house_2025q1.ipynb  notebook_v1_house_2025q1_ocr.ipynb
00. S3S4 en cours/: .gitignore  00_exploration.ipynb  01_backtest.ipynb  01_quiver_partie_A_table_finale_commentee.ipynb  01_quiver_partie_A_table_finale_only.ipynb  02_chasse_au_signal.ipynb  02_construction_table_2014_2026.ipynb  03_Recherche_Signal_2014_2026.ipynb  03_strategie_ramify.ipynb  04_Copier_Congres_Simple.ipynb  04_note_recherche.md  Congress_Trading_Signal_Recherche.ipynb  PROMPT_RECHERCHE_S34.md  RAMIFY_V2_ETF.ipynb  RAPPORT_NOTEBOOK_02.md  RAPPORT_RECHERCHE.tex  RAPPORT_STRATEGIE.md  README.md  STRATEGIE_ANALYSE.md  SUPP_00_exploration.ipynb  SUPP_A_backtest_generique.ipynb  SUPP_B_chasse_au_signal.ipynb  evaluate.py  leadership.py  prices.py  run.py  selection.py  variants.py
1 SENAT/: mccormick_validation.html  notebook_v1_senate_2025q1.ipynb
Diabeetus_feat_Pepito-main/: README.md  README_final.md  compare_dates.py  daily_run.py  data_exploration_fixed.ipynb  data_utils.py  download_historical.py  download_trading_pdfs.py  load_trades.py  read_pdf.py  requirements.txt  us_congress_strat.ipynb
(+2345 files in other folders)
